--- a/estilos.css
+++ b/estilos.css
@@ -1,21 +1,53 @@
+*{
+  font-family: 'Tourney', cursive; 
+}
+body{
+    padding: 0;
+    margin: 0;
+    background-color: black;
+     
+}
+
+
 h1{
-    color: aqua;
+   color: whitesmoke;
     text-align: center;
+    font-size: 70px;
+    background-color: black;
 }
 
-ul {
-    border: 1px solid #e7e7e8;
-    background-color: #e7e7e8;
+nav ul {
+    border: 1px solid #000000;
+    color: whitesmoke;
     list-style-type: none;
-    margin: 10;
-    padding: 10;
+    padding:10px;
+    text-align: center;
+    width: 100%;
+   }
 
+nav li {
+    text-align: center;
+    display: inline;
+   
+  }
+
+  nav a{
+    text-decoration: none;
+    padding: 10px;
+    color: whitesmoke;
+   
+    
 }
 
-li {
-    text-align: center;
-    border-bottom: 1px solid rgb(0, 0, 0);
-    display: inline;
-  }
-  
+nav a:hover{
+    background-color:whitesmoke ;
+    color: black;
+}
+a:visited{
+    color: whitesmoke;
+}
+footer{
+    color: aliceblue;
+}
+
  
