--- a/estilohome.css
+++ b/estilohome.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; /*para que elementos continentes de paddings... no se muevan con hover...*/
 
 }
 
@@ -19,9 +19,89 @@ body{
 
 .menu a{
     color: whitesmoke;
+    text-decoration: none;
+    padding: 10px 20px; /*aqui no se agranda, en el hover SI!*/
+}
 
+.menu{
+    display: flex;
+    width: 50%; /*importante espacio entre palabras*/
+    justify-content: space-around;
+    
+    
+}
+
+.menu li{
+    list-style: none;
+    cursor: pointer;
+    
+}
+
+.menu a:hover{
+    background-color: aqua;
+    color: black;
+    transition:ease-in 0.2s;
+    border-radius: 10px; /*Aqui se redondean sus bordes verdes...*/
+    
 }
 
 .logo span{
     color: aqua;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-between ;
+    padding: 30px;
+    
+    
+}
+
+.contenido1{
+    margin: 0 auto;
+    width: 80vw;
+    height: 80vh;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+}
+
+.contenido2 h1 span{
+    color: aqua;
+}
+
+.descargacv{
+    padding: 10px 20px;
+    margin: 30px;
+    border:none;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: whitesmoke;
+}
+
+.contenido2{
+    padding-right: 50px;
+}
+
+.contenido2 p{
+    text-align: justify;
+}
+
+.descargacv:hover{
+background-color: aqua
+
+}
+
+.contenido1 img{/*creo que conviene siempre usar max-w y max-h a 300px?*/
+    max-width: 300px;
+    max-height: 300px;
+    border: solid 2px;
+    border-color: whitesmoke
+    
+}
+
+.contenido1 img:hover{
+    border: solid 4px;
+    border-color: aqua;
+    
 }
