--- a/estilohome.css
+++ b/estilohome.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box; /*para que elementos continentes de paddings... no se muevan con hover...*/
     background-color: black;
+    font-family: 'Roboto Mono', monospace;
+
     
 }
 
@@ -31,7 +33,8 @@ header span{
     
     background-color: black;
     color: whitesmoke;
-    margin-left: 50px; 
+    margin-left: 50px;
+    margin-top: 10px; 
     
 }
 
@@ -70,7 +73,8 @@ background-color: aqua;
 }
 
 .boton{
-    
+    padding-top: 20px;
+    margin-top: 20px; 
 }
 
 .contenido1 img{/*creo que conviene siempre usar max-w y max-h a 300px?*/
